@@ -1436,7 +1436,7 @@ public class DDLTask extends Task<DDLWork> implements Serializable {
     String lockData = lockTbl.getQueryId() + ":" + String.valueOf(System.currentTimeMillis());
 
     if (partSpec == null) {
-      HiveLock lck = lockMgr.lock(new HiveLockObject(tbl, lockData), mode, true);
+      HiveLock lck = lockMgr.lock(new HiveLockObject(tbl, lockData), mode, true, 0, 0);
       if (lck == null) {
         return 1;
       }
@@ -1447,7 +1447,7 @@ public class DDLTask extends Task<DDLWork> implements Serializable {
     if (par == null) {
       throw new HiveException("Partition " + partSpec + " for table " + tabName + " does not exist");
     }
-    HiveLock lck = lockMgr.lock(new HiveLockObject(par, lockData), mode, true);
+    HiveLock lck = lockMgr.lock(new HiveLockObject(par, lockData), mode, true, 0, 0);
     if (lck == null) {
       return 1;
     }
